fixed alignment issue

--- a/Code/static/css/Adminserver.css
+++ b/Code/static/css/Adminserver.css
@@ -30,7 +30,9 @@ button:nth-of-type(2) {
 }
 
 button:nth-of-type(3),
-button:nth-of-type(4) {
+button:nth-of-type(4),
+button:nth-of-type(5),
+button:nth-of-type(6) {
     display: inline-block;
     margin-left: 10px;
 }
